コマの一覧表示を追加

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,15 +1,25 @@
-@(title: String)(content: Html)
+@(content: Html)
 
 <!DOCTYPE html>
-
 <html>
     <head>
-        <title>@title</title>
+        <title>TimeTable</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+    	<header>
+    		<h1>
+    			<a href="@routes.Application.index()">
+    				Play timetable
+    			</a>
+    		</h1>
+    	</header>
+
+	    <section id="main">
+    	    @content
+    	</section>
+
     </body>
 </html>
