項目の追加

--- a/app/views/createKomaForm.scala.html
+++ b/app/views/createKomaForm.scala.html
@@ -13,7 +13,9 @@
         <fieldset>
 
             @inputText(komaForm("name"), '_label -> "Koma name", '_help -> "")
-
+            @inputText(komaForm("day"), '_label -> "Time", '_help -> "")
+            @inputText(komaForm("num"), '_label -> "Day", '_help -> "")
+            @inputText(komaForm("prof"), '_label -> "Prof name", '_help -> "")
         </fieldset>
 
         <div class="actions">
