--- a/app/views/listKoma.scala.html
+++ b/app/views/listKoma.scala.html
@@ -11,6 +11,9 @@
 
                     <tr>
                         <td><a href="@routes.Application.editKoma(koma.id)">@koma.name</a></td>
+                        <td>@koma.num</td>
+                        <td>@koma.day</td>
+                        <td>@koma.prof</td>
                     </tr>
                 }
             </tbody>
